# deepin-voice-note

./: .gitignore  .project  CMakeLists.txt  README.md  README.zh_CN.md  deepin-voice-note.pro  linglong.yaml  voice-note.pro
src/: CMakeLists.txt  deepin-voice-note-web.qrc  deepin-voice-note.qrc  environments.h.in  globaldef.h  lupdate.sh  main.cpp  main.qml  vnoteapplication.cpp  vnoteapplication.h
src/audio/: audio_watcher.cpp  audio_watcher.h  gstreamrecorder.cpp  gstreamrecorder.h  recording_curves.cpp  recording_curves.h
src/common/: VNoteMainManager.cpp  VNoteMainManager.h  VNoteMainWindow.cpp  VNoteMainWindow.h  actionfactory.cpp  actionfactory.h  actionmanager.cpp  actionmanager.h  audiowatcher.cpp  audiowatcher.h  dataencryption.cpp  dataencryption.h  datatypedef.cpp  datatypedef.h  eventlogutils.cpp  gstreamrecorder.cpp  gstreamrecorder.h  imageprovider.cpp  imageprovider.h  jscontent.cpp  jscontent.h  metadataparser.cpp  metadataparser.h  opsstateinterface.cpp  opsstateinterface.h  performancemonitor.cpp  performancemonitor.h  qtplayer.cpp  qtplayer.h  setting.cpp  setting.h  standarditemcommon.cpp  standarditemcommon.h  thumbnail.cpp  thumbnail.h  utils.cpp  utils.h  vlcpalyer.cpp  vlcpalyer.h  vlcplayer.cpp  (+27 more)
src/db/: dbvisitor.cpp  dbvisitor.h  vnotedbmanager.cpp  vnotedbmanager.h  vnotefolderoper.cpp  vnotefolderoper.h  vnoteitemoper.cpp  vnoteitemoper.h  vnotesaferoper.cpp  vnotesaferoper.h
src/dbus/: VoiceNoteDBusService.cpp  VoiceNoteDBusService.h  dbuslogin1manager.cpp  dbuslogin1manager.h  dbusvariant.cpp  dbusvariant.h  org.deepin.voicenote.xml
src/dbusservice/: dbuslogin1manager.cpp  dbusvariant.cpp
src/dialog/: folderselectdialog.cpp  folderselectdialog.h  imageviewerdialog.cpp  imageviewerdialog.h  leftviewdialog.cpp  leftviewdialog.h  vnotebasedialog.cpp  vnotebasedialog.h  vnotemessagedialog.cpp  vnotemessagedialog.h
src/dsg/icons/: delete.dci  move_note.dci  new_note.dci  pin_top.dci  record.dci  recording_pause.dci  recording_start.dci  recording_stop.dci  save_audio.dci  save_note.dci  search_no_results.dci
src/gui/: VNoteButton.qml  VNoteToolButton.qml
src/gui/dialog/: MoveDialog.qml  SettingDialog.qml  VNoteMessageDialogLoader.qml  ViewPictureDialog.qml
src/gui/drag/: DragControl.qml
src/gui/mainwindow/: FolderListView.qml  InitialInterface.qml  ItemListView.qml  MainWindow.qml  MultipleChoices.qml  RecordingView.qml  SelectView.qml  Shortcuts.qml  TitleBarMenu.qml  VNoteRightMenu.qml  WebEngineView.qml  WindowTitleBar.qml
src/handler/: vnote_message_dialog_handler.cpp  vnote_message_dialog_handler.h  voice_player_handler.cpp  voice_player_handler.h  voice_recoder_handler.cpp  voice_recoder_handler.h  voice_to_text_handler.cpp  voice_to_text_handler.h  voice_to_text_task_manager.cpp  voice_to_text_task_manager.h  web_engine_handler.cpp  web_engine_handler.h
src/icon/: multiple_choice.dci  no_content.dci
src/importolddata/: olddataloadwokers.cpp  olddataloadwokers.h  olddbvisistors.cpp  olddbvisistors.h  upgradedbutil.cpp  upgradedbutil.h  upgradeview.cpp  upgradeview.h  vnoteolddatamanager.cpp  vnoteolddatamanager.h
src/task/: exportnoteworker.cpp  exportnoteworker.h  filecleanupworker.cpp  filecleanupworker.h  loadfolderworker.cpp  loadfolderworker.h  loadiconsworker.cpp  loadiconsworker.h  loadnoteitemsworker.cpp  loadnoteitemsworker.h  loadsafeteydataworker.cpp  loadsafeteydataworker.h  vnclearunusedvoicetask.cpp  vnclearunusedvoicetask.h  vndatasafertask.cpp  vndatasafertask.h  vnmainwnddelayinittask.cpp  vnmainwnddelayinittask.h  vntask.cpp  vntask.h
src/views/: homepage.cpp  homepage.h  leftview.cpp  leftview.h  leftviewdelegate.cpp  leftviewdelegate.h  leftviewlist.cpp  leftviewlist.h  leftviewsortfilter.cpp  leftviewsortfilter.h  middleview.cpp  middleview.h  middleviewdelegate.cpp  middleviewdelegate.h  middleviewsortfilter.cpp  middleviewsortfilter.h  moveview.cpp  moveview.h  richtextedit.cpp  richtextedit.h  rightview.cpp  rightview.h  splashview.cpp  splashview.h  textnoteedit.cpp  textnoteedit.h  textnoteitem.cpp  textnoteitem.h  vnotemainwindow.cpp  vnotemainwindow.h  vnoterecordbar.cpp  vnoterecordbar.h  voicenoteitem.cpp  voicenoteitem.h  webengineview.cpp  webengineview.h  webrichtexteditor.cpp  webrichtexteditor.h
src/web/: index.css  index.html  index.js
src/web/css/: bootstrap.css  bootstrapCssReset.css  dark.css  style.css  voiceplayback.css
src/web/css/createfont/: createfont.js
src/web/css/fonts/: icomoon.eot
src/web/js/: summernote_v9_2.js
src/widgets/: vnote2siconbutton.cpp  vnote2siconbutton.h  vnoteiconbutton.cpp  vnoteiconbutton.h  vnotemultiplechoiceoptionwidget.cpp  vnotemultiplechoiceoptionwidget.h  vnoteplaywidget.cpp  vnoteplaywidget.h  vnotepushbutton.cpp  vnotepushbutton.h  vnoterecordwidget.cpp  vnoterecordwidget.h  vnoterightmenu.cpp  vnoterightmenu.h  vnwaveform.cpp  vnwaveform.h
test/FuzzyTest/: CMakeLists.txt
test/FuzzyTest/gstream-1.4/gst/: Makefile  gstenumtypes.c  libgstreamer-1.0.la  libgstreamer_1.0_la-gst.lo  libgstreamer_1.0_la-gstallocator.lo  libgstreamer_1.0_la-gstatomicqueue.lo  libgstreamer_1.0_la-gstbin.lo  libgstreamer_1.0_la-gstbuffer.lo  libgstreamer_1.0_la-gstbufferlist.lo  libgstreamer_1.0_la-gstbufferpool.lo  libgstreamer_1.0_la-gstbus.lo  libgstreamer_1.0_la-gstcaps.lo  libgstreamer_1.0_la-gstcapsfeatures.lo  libgstreamer_1.0_la-gstchildproxy.lo  libgstreamer_1.0_la-gstclock.lo  libgstreamer_1.0_la-gstcontext.lo  libgstreamer_1.0_la-gstcontrolbinding.lo  libgstreamer_1.0_la-gstcontrolsource.lo  libgstreamer_1.0_la-gstdatetime.lo  libgstreamer_1.0_la-gstdebugutils.lo  libgstreamer_1.0_la-gstdevice.lo  libgstreamer_1.0_la-gstdevicemonitor.lo  libgstreamer_1.0_la-gstdeviceprovider.lo  libgstreamer_1.0_la-gstdeviceproviderfactory.lo  libgstreamer_1.0_la-gstelement.lo  libgstreamer_1.0_la-gstelementfactory.lo  libgstreamer_1.0_la-gstenumtypes.lo  libgstreamer_1.0_la-gsterror.lo  libgstreamer_1.0_la-gstevent.lo  libgstreamer_1.0_la-gstformat.lo  libgstreamer_1.0_la-gstghostpad.lo  libgstreamer_1.0_la-gstinfo.lo  (+37 more)
test/FuzzyTest/src/: main.cpp
(+988 files in other folders)
